// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActiveLink /> with active should render correctly 1`] = `
<div
  className=" active"
  data-testid="ActiveLink"
>
  Link
</div>
`;

exports[`<ActiveLink /> with not active should render correctly 1`] = `
<div
  className=""
  data-testid="ActiveLink"
>
  <Link
    href="/"
  >
    <a>
      Link
    </a>
  </Link>
</div>
`;
